--- a/src/header.html
+++ b/src/header.html
@@ -2,9 +2,12 @@
 <html lang="en">
 <head>
     <meta charset="UTF-8">
-    <title>Title</title>
+    <title>Header</title>
 </head>
 <body>
-
+James Vo
+Adv Web App Development
+Assignment 1
+3/19/23
 </body>
 </html>
