--- a/public/index.html
+++ b/public/index.html
@@ -24,9 +24,21 @@
       work correctly both with client-side routing and a non-root public URL.
       Learn how to configure a non-root public URL by running `npm run build`.
     -->
-    <title>React App</title>
+    <title>Assignment One</title>
   </head>
   <body>
+  <p>
+    James Vo
+  </p>
+  <p>
+    Adv Web App Development
+  </p>
+  <P>
+    Assignment 1
+  </P>
+  <p>
+    3/19/23
+  </p>
     <noscript>You need to enable JavaScript to run this app.</noscript>
     <div id="root"></div>
     <!--
